# aiogram3-bot-template

./: .dockerignore  .env.dist  .gitignore  COPYING  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
bot/: __main__.py  config.py
bot/core/: config.py
bot/core/factory/: bot.py  dispatcher.py  setup.py  storage.py
bot/core/instances/: __init__.py  bot.py  dispatcher.py  settings.py  setup.py  storage.py
bot/core/runtime/: __init__.py  polling.py  runner.py  webhook.py
bot/enums/: __init__.py  locale.py
bot/filters/: __init__.py  states.py
bot/handlers/common/: __init__.py  callback.py  language.py  menu.py  start.py
bot/handlers/messages/: __init__.py  echo.py
bot/keyboards/inline/: __init__.py  factory.py  menu.py
bot/keyboards/reply/: __init__.py  base.py
bot/services/api/: base.py
bot/services/database/models/: base.py  user.py
bot/services/database/repositories/: general.py  user.py
bot/utils/: __init__.py  commands.py
locales/en/: messages.ftl
locales/uk/: messages.ftl
migrations/: env.py
migrations/versions/: 001_create_table.py
nginx/: nginx.conf
scripts/: docker-entrypoint.sh
systemd/: telegram-bot.service
