[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Telegram_Bot"
version = "0.1.0"
description = ""
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name="Kanashii" }
]
dependencies = [
    "aiogram>=3.7.0",
    "aiogram-i18n>=1.3.4",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "fluent-runtime>=0.4.0",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.29"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.3.7"
]
api = [
    "ujson>=5.10.0",
    "backoff>=2.2.1",
    "fake-useragent>=1.5.1"
]
redis = [
    "redis>=5.0.3"
]
mongo = [
    "motor>=3.5.0"
]
scheduler = [
    "apscheduler>=3.10.4"
]

[project.urls]
Homepage = "https://github.com/Th3Kanashii/aiogram3-bot-template.git"
Documentation = "https://github.com/Th3Kanashii/aiogram3-bot-template#readme"
"Source code" = "https://github.com/Th3Kanashii/aiogram3-bot-template.git"

[tool.hatch.version]
path = "bot/__meta__.py"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[tool.ruff]
cache-dir = ".cache/ruff"
line-length = 99
output-format = "full"
preview = true
show-fixes = true
exclude = [
    ".git",
    ".venv",
    ".idea",
    ".tests",
    ".cache",
    "build",
    "dist",
    "scripts",
    "migrations"
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "ALL"
]
extend-select = [
    "ANN204" # missing-return-type-special-method
]
ignore = [
    "D", # pydocstyle
    "CPY", # flake8-copyright
    "FA", # flake8-future-annotations
    "ANN", # flake8-annotations
    "EM", # flake8-errmsg
    "ICN", # flake8-import-conventions
    "TRY003", # raise-vanilla-args
    "PLR6301", # no-self-use
    "PLR0904", # too-many-public-methods
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0914", # too-many-locals
    "PLR0915", # too-many-statements
    "PLR0916", # too-many-boolean-expressions
    "PLR0917", # too-many-positional
    "PLR1702" # too-many-nested-blocks
]

[tool.ruff.lint.isort]
lines-after-imports = 2
force-wrap-aliases = true
combine-as-imports = true

[tool.ruff.lint.pylint]
allow-magic-value-types = []

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.mypy]
python_version = "3.8"
cache_dir = ".cache/mypy"
strict = true
show_error_context = true
show_column_numbers = true
pretty = true
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin"
]
exclude = [
    ".git",
    ".venv",
    ".idea",
    ".tests",
    ".cache",
    "build",
    "dist",
    "scripts",
    "migrations"
]
